force-app/main/default/objects/Torc_Note__c/Torc_Note__c.object-meta.xml
<CustomObject>
    <label>Torc Note</label>
    <nameField>
        <displayFormat>N-{0000000000}</displayFormat>
        <label>Torc Note Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Torc Notes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>