force-app/main/default/objects/Torc_Note__c/fields/content__c.field-meta.xml
<CustomField>
    <fullName>content__c</fullName>
    <label>content</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>