force-app/main/default/objects/Torc_Note__c/fields/createdAt__c.field-meta.xml
<CustomField>
    <fullName>createdAt__c</fullName>
    <label>created At</label>
    <type>DateTime</type>
</CustomField>