force-app/main/default/objects/Torc_Note__c/fields/externalSystemId__c.field-meta.xml
<CustomField>
    <fullName>externalSystemId__c</fullName>
    <label>externalSystemId</label>
    <length>80</length>
    <type>Text</type>
</CustomField>