force-app/main/default/objects/Torc_Note__c/fields/isPublic__c.field-meta.xml
<CustomField>
    <fullName>isPublic__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isPublic</label>
    <type>Checkbox</type>
</CustomField>