force-app/main/default/objects/Torc_Note__c/fields/noteType__c.field-meta.xml
<CustomField>
    <fullName>noteType__c</fullName>
    <label>noteType</label>
    <length>80</length>
    <type>Text</type>
</CustomField>